RESOLVED FIXED52550
Assertion failure (!inSetWindow) with in-process plug-in in plugins/destroy-on-setwindow.html
https://bugs.webkit.org/show_bug.cgi?id=52550
Summary Assertion failure (!inSetWindow) with in-process plug-in in plugins/destroy-o...
mitz
Reported 2011-01-16 19:48:35 PST
Assertion failure (!inSetWindow) with in-process plug-in in plugins/destroy-on-setwindow.html
Attachments
Remove the assertion and account for possible reentrancy in setting inSetWindow (1.65 KB, patch)
2011-01-16 19:52 PST, mitz
simon.fraser: review+
mitz
Comment 1 2011-01-16 19:52:45 PST
Created attachment 79123 [details] Remove the assertion and account for possible reentrancy in setting inSetWindow
mitz
Comment 2 2011-01-16 20:22:47 PST
Note You need to log in before you can comment on or make changes to this bug.