Assertion failure (!inSetWindow) with in-process plug-in in plugins/destroy-on-setwindow.html https://bugs.webkit.org/show_bug.cgi?id=52550

Reviewed by Simon Fraser.

* Plugins/WebNetscapePluginView.mm:
(-[WebNetscapePluginView setWindowIfNecessary]): Removed the assertion, making sure
that inSetWindow remains YES until we exit the top-level setWindowIfNecessary.



Canonical link: https://commits.webkit.org/66153@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@75907 268f45cc-cd09-0410-ab3c-d52691b4dbfc